--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MemoriesActivity"></activity>
-    </application>
+        <activity android:name=".MemoriesActivity"
+            android:screenOrientation="landscape">
 
+        </activity>
+    </application>
 </manifest>
